<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.suprinya.surveymonkeyplayground.MainActivity">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_monkey_survey"
            app:layout_constraintBottom_toTopOf="@+id/btnFeedbackTemplate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/btnFeedbackTemplate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_feedback_template"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnFeedbackCustom"/>
        <Button
            android:id="@+id/btnFeedbackCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_feedback"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btnFeedbackLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_feedback_link"
            android:textColor="@android:color/white"
            android:theme="@style/MyButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFeedbackCustom" />

        <Button
            android:id="@+id/btnLineLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/line_login"
            android:textColor="@android:color/white"
            android:theme="@style/LineButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFeedbackLink" />

    </android.support.constraint.ConstraintLayout>
</layout>
